tests/snapshots/cli__hdf5__emit_commands.snap
---
source: tests/cli.rs
expression: out
---
detail: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight
dtype stored: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --dtype stored
histogram: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --histogram
histogram bins: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --histogram --bins 4
values window: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --values --window=1,1
values hex: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --values --edge --base hex
heatmap: checkpoint-studio [FIXTURE] --tensor model.layers.0.block_sparse_moe.experts.down_proj.weight --heatmap --edge
