tests/snapshots/cli__hdf5__legend_tree.snap
---
source: tests/cli.rs
expression: "plain(&[\"--legend\"])"
---
Checkpoint Studio - [FIXTURE] (1/1)                                                                   [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▾ [FIXTURE] (▦ 23, 988 params, 2.0 KiB → 1.2 KiB)
  ▸ 🔧 Metadata (▦ 0, 0 B)
  · lm_head.weight [F16, (10, 4), 80 B → 27 B (⇩ gzip)]
  ▾ model (▦ 22, 2.0 KiB → 1.2 KiB)
    · embed_tokens.weight [F16, (10, 4), 80 B → 27 B (⇩ gzip)]
    ▸ layers (≡ 3, ▦ 19, 1.9 KiB → 1.2 KiB)
    · norm.weight [F32, (4), 16 B (uncompressed)]
    · sc╭ Legend — checkpoint tree ────────────────────────────────────────────────────────────────────────────╮
        │   ▾ ▸             a group, expanded / collapsed (Enter or Space toggles it)                          │
        │   ·               a tensor (a stored array)                                                          │
        │   ✚               an extra tensor on disk but not listed in the index (model.safetensors.index.json) │
        │   †               a metadata entry (shown beside its tensor, or in the Metadata group)               │
        │   ≡ N             number of layers (numbered sub-groups) in the group                                │
        │   ▦ N             number of tensors in the group / checkpoint                                        │
        │   A → B           logical size → on-disk size (shown only when they differ)                          │
        │   ⇩ lz4           compressed on disk; the codec is named after the glyph                             │
        │   (uncompressed)  stored uncompressed on disk                                                        │
        │                                                                                                      │
        │   I16             the tensor's data type is tinted (warm amber)                                      │
        │   ▪ ▸             status bar: a single source file / a directory of shards                           │
        │                                                                                                      │
        │    read-only       browsing never modifies the checkpoint — repack / convert write a new file        │
        │    metadata-only   a remote source: only header metadata is loaded; data views need the file locally │
        │    ⚠ health        health: warnings only (e.g. files on disk the index doesn't list)                 │
        │    ⚠ health        health: an error — a referenced file or tensor is missing on disk                 │
        │                                                                                                      │
        │ Click or press any key to close.                                                                     │
        ╰──────────────────────────────────────────────────────────────────────────────────────────────────────╯





↑/↓ navigate · ←/→ parent/child · Shift+↑/↓ sibling · PgUp/PgDn page · Enter open · Tab files · Space/: commands
e/c expand/collapse all · / search · l legend · h health · s stats · t copy tree · f copy file · n copy name
y copy command · ⌫/\ back/fwd · r repack · q quit
 ▸ tests/fixtures
                                                                                                              read-only
