tests/snapshots/cli__hdf5__stats_popup.snap
---
source: tests/cli.rs
expression: "plain(&[\"--stats\"])"
---
 Checkpoint stats                                                                                                    [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Overview
  Parameters   988
  Size         1.2 KiB on disk · 2.0 KiB logical (1.65× smaller)

▤ Files  ×1
  Largest      2.0 KiB   [FIXTURE]
  Smallest     2.0 KiB   [FIXTURE]
  Average      2.0 KiB
  Median       2.0 KiB

▦ Tensors  ×23
  Largest      192 B     model.layers.2.block_sparse_moe.experts.down_proj.weight.qscale
  Smallest     8 B       model.scale.i8
  Average      91 B
  Median       64 B

≡ Layers  ×3
  Params       298 each · 896 total
  Size         637 B each · 1.9 KiB total

◆ Experts  ×6 per layer
  Storage      fused (stacked tensors) · gate+up fused
  Params       45 each · 816 total
  Size         90 B each · 1.6 KiB total
  down_proj    400 B each · 1.2 KiB total
  gate_up_proj 144 B each · 432 B total

Per-layer profile
  Size/layer     █▁▁  624 B–664 B

  Params/layer   █▁▁  292–312

  Tensors/layer  █▁▁  6–7

  Composition    ████▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓░░   █ attention 10% · ▓ ffn/experts 85% · ░ other 5%
↑↓ PgUp/PgDn scroll · 1–35 of 71
↑/↓ scroll · PgUp/PgDn page · r copy report · c copy screen · y copy command · l legend · ⌫ back · q quit
