tests/snapshots/cli__hdf5__tree_collapsed.snap
---
source: tests/cli.rs
expression: "plain(&[\"--tree-state\", \"collapsed\"])"
---
Checkpoint Studio - [FIXTURE] (1/1)                                                                   [×]
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
▸ [FIXTURE] (▦ 23, 988 params, 2.0 KiB → 1.2 KiB)
































↑/↓ navigate · ←/→ parent/child · Shift+↑/↓ sibling · PgUp/PgDn page · Enter open · Tab files · Space/: commands
e/c expand/collapse all · / search · l legend · h health · s stats · d compare · k compact · o/O sort/reverse
t copy tree · f copy file · n copy name · y copy command · ⌫/\ back/fwd · r repack · q quit
 ▸ tests/fixtures
                                                                                                              read-only
